:bug: fix: header z-index and number input kerboard

--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -3,6 +3,7 @@
   display: flex;
   /* Position and Layout */
   position: fixed;
+  z-index: 100;
   justify-content: center;
   align-items: center;
   /* Box Model */
